--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 <body>
 <!-- Header Section -->
-<section class="banner" role="banner"> 
+<section class="banner" role="banner">
   <!-- Navigation Section -->
   <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="#">Floix</a>
+    <div class="header-content clearfix"> <a class="logo" href="#">Alukardo</a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <li><a href="#introduction">About Me</a></li>
@@ -33,7 +33,7 @@
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
   </header>
-  <!-- Navigation Section --> 
+  <!-- Navigation Section -->
   <!-- Banner Section -->
   <div class="container">
     <div class="col-md-7 banner-inner-wrapper">
@@ -41,12 +41,12 @@
         <h1>I'm Johnathan. A Freelance Creative Director</h1>
         <p>One page resume, portfolio Bootstrap template for designers.</p>
         <a href="#" class="btn">Find out more</a> </div>
-      <!-- banner text --> 
+      <!-- banner text -->
     </div>
   </div>
-  <!-- Banner Section --> 
+  <!-- Banner Section -->
 </section>
-<!-- Header Section --> 
+<!-- Header Section -->
 <!-- Intro Section -->
 <section id="introduction" class="section introduction">
   <div class="container">
@@ -78,7 +78,7 @@
     </div>
   </div>
 </section>
-<!-- Intro Section --> 
+<!-- Intro Section -->
 
 <!-- work section -->
 <section id="works" class="works section no-padding">
@@ -90,7 +90,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-2.jpg" class="work-box"> <img src="images/work-2.jpg" alt="">
         <div class="overlay">
@@ -98,7 +98,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-3.jpg" class="work-box"> <img src="images/work-3.jpg" alt="">
         <div class="overlay">
@@ -106,7 +106,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-4.jpg" class="work-box"> <img src="images/work-4.jpg" alt="">
         <div class="overlay">
@@ -114,7 +114,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-5.jpg" class="work-box"> <img src="images/work-5.jpg" alt="">
         <div class="overlay">
@@ -122,7 +122,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-6.jpg" class="work-box"> <img src="images/work-6.jpg" alt="">
         <div class="overlay">
@@ -130,7 +130,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-7.jpg" class="work-box"> <img src="images/work-7.jpg" alt="">
         <div class="overlay">
@@ -138,7 +138,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-8.jpg" class="work-box"> <img src="images/work-8.jpg" alt="">
         <div class="overlay">
@@ -146,7 +146,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-9.jpg" class="work-box"> <img src="images/work-9.jpg" alt="">
         <div class="overlay">
@@ -154,7 +154,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-10.jpg" class="work-box"> <img src="images/work-10.jpg" alt="">
         <div class="overlay">
@@ -162,7 +162,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-11.jpg" class="work-box"> <img src="images/work-11.jpg" alt="">
         <div class="overlay">
@@ -170,7 +170,7 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-12.jpg" class="work-box"> <img src="images/work-12.jpg" alt="">
         <div class="overlay">
@@ -178,12 +178,12 @@
             <p><i class="fa fa-search-plus fa-2x"></i></p>
           </div>
         </div>
-        <!-- overlay --> 
+        <!-- overlay -->
         </a> </div>
     </div>
   </div>
 </section>
-<!-- work section --> 
+<!-- work section -->
 
 <!-- footer section -->
 <footer id="contact" class="footer">
@@ -209,14 +209,14 @@
     </div>
   </div>
 </footer>
-<!-- footer section --> 
+<!-- footer section -->
 
-<!-- JS FILES --> 
-<script src="https://cdn.staticfile.org/jquery/1.11.3/jquery.min.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/jquery.fancybox.pack.js"></script> 
-<script src="js/retina.min.js"></script> 
-<script src="js/modernizr.js"></script> 
+<!-- JS FILES -->
+<script src="https://cdn.staticfile.org/jquery/1.11.3/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.fancybox.pack.js"></script>
+<script src="js/retina.min.js"></script>
+<script src="js/modernizr.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
