--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="col-md-7 banner-inner-wrapper">
       <div class="banner-text">
-        <h1>I'm Johnathan. A Freelance Creative Director</h1>
+        <h1>I'm Alukardo. A Software Development Engineer </h1>
         <p>One page resume, portfolio Bootstrap template for designers.</p>
         <a href="#" class="btn">Find out more</a> </div>
       <!-- banner text -->
@@ -58,19 +58,23 @@
       </div>
       <div class="col-md-5 col-sm-6">
         <div class="intro-content">
-          <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-          <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
+          <p>
+            I am a PhD in Information Management from NTUST, with experience as a Software Development Engineer at NEC Wuhan. My research focuses on human-computer interaction, machine vision, and data visualization.
+          </p>
+          <p>
+            Imagine designing user interfaces that make complex tasks easier, guiding machines to understand the world in a creative way, or crafting stories from data that are both engaging and interesting. Whether it's studying how humans interact with technology or helping machines mimic human intuition, each project offers an exciting challenge that I am enthusiastic to tackle-systematically, using algorithms and visual representations.
+          </p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="intro-content">
           <h4>my expertise</h4>
           <ul>
-            <li> - web design and development</li>
-            <li> - corporate identity</li>
-            <li> - Digital marketing</li>
-            <li> - Promotion material</li>
-            <li> - Branding</li>
+            <li> - Deep Learning</li>
+            <li> - Image Processing</li>
+            <li> - Visual Design</li>
+            <li> - Generative Art </li>
+            <li> - iOS Development</li>
             <li> - UX Strategy</li>
           </ul>
         </div>
@@ -84,102 +88,138 @@
 <section id="works" class="works section no-padding">
   <div class="container-fluid">
     <div class="row no-gutter">
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-1.jpg" class="work-box"> <img src="images/work-1.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
-          </div>
-        </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-2.jpg" class="work-box"> <img src="images/work-2.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="https://www.baidu.com" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-1.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-3.jpg" class="work-box"> <img src="images/work-3.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-2.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-2.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-4.jpg" class="work-box"> <img src="images/work-4.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-3.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-3.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-5.jpg" class="work-box"> <img src="images/work-5.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-4.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-4.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-6.jpg" class="work-box"> <img src="images/work-6.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-5.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-5.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-7.jpg" class="work-box"> <img src="images/work-7.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-6.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-6.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-8.jpg" class="work-box"> <img src="images/work-8.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-7.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-7.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-9.jpg" class="work-box"> <img src="images/work-9.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-8.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-8.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-10.jpg" class="work-box"> <img src="images/work-10.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-9.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-9.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-11.jpg" class="work-box"> <img src="images/work-11.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-10.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-10.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-12.jpg" class="work-box"> <img src="images/work-12.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <p><i class="fa fa-search-plus fa-2x"></i></p>
+        <a href="images/work-11.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
           </div>
-        </div>
+        </a>
+        <img src="images/work-11.jpg" alt="">
+      </div>
+      <div class="col-lg-2 col-md-4 col-sm-4 work">
         <!-- overlay -->
-        </a> </div>
+        <a href="images/work-12.jpg" class="work-box">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <p><i class="fa fa-search-plus fa-2x"></i></p>
+            </div>
+          </div>
+        </a>
+        <img src="images/work-12.jpg" alt="">
+      </div>
     </div>
   </div>
 </section>
@@ -190,12 +230,12 @@
   <div class="container">
     <div class="col-md-4">
       <h4>Contact</h4>
-      <p> Collins Street West Victoria 8007 Australia.<br>
-        Call: 612.269.8419 <br>
-        Email : <a href="mailto:hello@domain.com"> hello@domain.com </a></p>
+      <p> No.398 Donghai Avenue, Quanzhou City, Fujian Province, 362000, China.<br>
+        Call: +86 177 0464 0697 <br>
+        Email : <a href="mailto:lj062003@163.com"> lj062003@163.com </a></p>
     </div>
     <div class="col-md-3">
-      <h4>Social presense</h4>
+      <h4>Social presence</h4>
       <ul class="footer-share">
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -205,7 +245,7 @@
     </div>
     <div class="col-md-5">
       <p>© 2015 All rights reserved. All Rights Reserved<br>
-        <a target="_blank" href="http://www.mobanwang.com/" title="网页模板">网页模板</a></p>
+        <a target="_blank" href="https://github.com/Alukardo" title="Alukardo">Alukardo</a></p>
     </div>
   </div>
 </footer>
