--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   <div class="container">
     <div class="col-md-4">
       <h4>Contact</h4>
-      <p> No.398 Donghai Avenue, Quanzhou City, Fujian Province, 362000, China.<br>
+      <p> No.398 Donghai Street, Quanzhou City, Fujian Province, 362000, China.<br>
         Call: +86 177 0464 0697 <br>
         Email : <a href="mailto:lj062003@163.com"> lj062003@163.com </a></p>
     </div>
