--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             I am a PhD in Information Management from NTUST, with experience as a Software Development Engineer at NEC Wuhan. My research focuses on human-computer interaction, machine vision, and data visualization.
           </p>
           <p>
-            Imagine designing user interfaces that make complex tasks easier, guiding machines to understand the world in a creative way, or crafting stories from data that are both engaging and interesting. Whether it's studying how humans interact with technology or helping machines mimic human intuition, each project offers an exciting challenge that I am enthusiastic to tackle-systematically, using algorithms and visual representations.
+            Imagine designing user interfaces that make complex tasks easier, guiding machines to understand the world creatively, or crafting stories from data that are both engaging and interesting. Whether it's studying how humans interact with technology or helping machines mimic human intuition, each project offers an exciting challenge that I am enthusiastic to tackle-systematically, using algorithms and visual representations.
           </p>
         </div>
       </div>
@@ -70,12 +70,12 @@
         <div class="intro-content">
           <h4>my expertise</h4>
           <ul>
-            <li> - Deep Learning</li>
-            <li> - Image Processing</li>
-            <li> - Visual Design</li>
-            <li> - Generative Art </li>
-            <li> - iOS Development</li>
-            <li> - UX Strategy</li>
+            <li> — Deep Learning</li>
+            <li> — Image Processing</li>
+            <li> — Visual Design</li>
+            <li> — Generative Art </li>
+            <li> — iOS Development</li>
+            <li> — UX Strategy</li>
           </ul>
         </div>
       </div>
