--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en-US">
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -21,7 +21,7 @@
 	<meta content="" name="twitter:card" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link href="favicon.ico" rel="shortcut icon">
+	<link href="images/favicon.ico" rel="shortcut icon">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -115,7 +115,6 @@
 					</ul>
 				</div>
 			</section>
-
 			<div class="timeline">
 				<!--==========================================
                        Education
@@ -218,7 +217,7 @@
 															<p><b><a href="index.html">Jie Lin</a></b> and,
 																<a href="https://cgm.cs.ntust.edu.tw/Activity/lab/director.html">Chuan-Kai Yang</a>,
 															<div class="paper-conf">Computers & Graphics, 2025: 104169.</div>
-															<p>[<a href="Visualizing NBA information via storylines" target="_blank">Paper</a>]</p>
+															<p>[<a href="https://www.sciencedirect.com/science/article/abs/pii/S0097849325000081?casa_token=jwtsB6dM-IMAAAAA:xP0s2GtgSWxPUylMUo5ShCTwIVeyJJZA6rb-yMyBhlK5WuGFWykhUCgitnQcjVjnPZlWH566X-M" target="_blank">Paper</a>]</p>
 														</div>
 														<div class="col-md-4">
 															<img alt="Italian Trulli" src="images/paper_6.png" width="50%">
@@ -234,7 +233,7 @@
 											<div class="timeline-icon color-5">
 											</div>
 											<div class="timeline-label">
-												<h2>Three-dimensional positioning on image point of interest via google geographic information</h2>
+												<h2>Three-dimensional positioning on image point of interest via Google geographic information</h2>
 												<div class="container">
 													<div class="row">
 														<div class="col-md-5">
@@ -376,84 +375,47 @@
 						<div class="row">
 							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 								<div class="fancy-collapse-panel">
-									<div aria-multiselectable="true" class="panel-group" id="accordion2" role="tablist">
+									<div aria-multiselectable="true" class="panel-group" id="accordion" role="tablist">
 										<div class="panel panel-default">
-											<div class="panel-heading" id="headingOne" role="tab">
+											<div class="panel-heading" id="heading1" role="tab">
 												<h4 class="panel-title">
-													<a aria-controls="collapseOne2" aria-expanded="false" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapseOne2">Meta - Research Scientist Intern / May 2022 - Aug 2022
+													<a aria-controls="collapse1" aria-expanded="true" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapse1">
+														Quanzhou Normal University - Lecturer / Aug 2011 — Now
 													</a>
 												</h4>
 											</div>
-											<div aria-labelledby="headingOne" class="panel-collapse collapse in" id="collapseOne2" role="tabpanel">
-												<div class="panel-body">
-													<div class="row">
-														<div class="col-md-12">
-															<ul>
-																<li>Neural radiance fields related topics.</li>
-															</ul>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="panel panel-default">
-											<div class="panel-heading" id="headingOne" role="tab">
-												<h4 class="panel-title">
-													<a aria-controls="collapseOne2" aria-expanded="false" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapseOne2">Argo AI - Software Engineer Intern / May 2021 - Aug 2021
-													</a>
-												</h4>
-											</div>
-											<div aria-labelledby="headingOne" class="panel-collapse collapse in" id="collapseOne2" role="tabpanel">
-												<div class="panel-body">
-													<div class="row">
-														<div class="col-md-12">
-															<ul>
-																<li>Conducted research on multimodal late fusion for object detection.</li>
-															</ul>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="panel panel-default">
-											<div class="panel-heading" id="headingTwo" role="tab">
-												<h4 class="panel-title">
-
-													<a aria-controls="collapseTwo2" aria-expanded="false" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapseTwo2">Amazon - Applied Scientist Intern / May 2020—Aug 2020
-													</a>
-												</h4>
-											</div>
-											<div aria-labelledby="headingTwo" class="panel-collapse collapse in" id="collapseTwo2" role="tabpanel">
+											<div aria-labelledby="heading1" class="panel-collapse collapse in" id="collapse1"
+												 role="tabpanel">
 												<div class="panel-body">
 													<div class="row">
 														<div class="col-md-6">
 															<ul>
-																<li>Conduct research on 3D object detection, connecting 2D/3D features for better recognition and box localization.</li>
-																<li>Achieved <b>3%</b> mean average precision (mAP) gain for indoor scenes.</li>
+																<li>Courses: Data Visualization</li>
+																<li>Courses: Machine Vision</li>
+																<li>Courses: Design Patterns</li>
 															</ul>
-														</div>
-														<div class="col-md-6">
-															<img alt="Italian Trulli" src="images/Amazon.png" width="100%">
 														</div>
 													</div>
 												</div>
 											</div>
 										</div>
 										<div class="panel panel-default">
-											<div class="panel-heading" id="headingThree" role="tab">
+											<div class="panel-heading" id="heading2" role="tab">
 												<h4 class="panel-title">
-													<a aria-controls="collapseTwo2" aria-expanded="false" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapseThree2">Academia Sinica - Research Assistant / Aug 2018 - Jul 2019
+													<a aria-controls="collapse2" aria-expanded="true" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapse2">
+														Key Laboratory of New Technologies and Knowledge Engineering <br>for Big Data Management, Fujian Province - Researcher / Aug 2013 - Jul 2016
 													</a>
 												</h4>
 											</div>
-											<div aria-labelledby="headingThree" class="panel-collapse collapse" id="collapseThree2" role="tabpanel">
+											<div aria-labelledby="heading2" class="panel-collapse collapse" id="collapse2" role="tabpanel">
 												<div class="panel-body">
 													<div class="row">
 														<div class="col-md-12">
+															Research Field：
 															<ul>
-																<li>Used fine-grained structure of face in feature space for accurate head pose estimation, resulting in a fast and compact CNN model.</li>
-																<li>Disentangled the information of image style and person classification features for person re-identification, and verified the disentanglement with cycle consistency of Generative Adversarial Network (GAN) using Pytorch.</li>
-																<li>Little shot learning for image classification</li>
+																<li>Human-computer interaction</li>
+																<li>Machine vision</li>
+																<li>Data visualization.</li>
 															</ul>
 														</div>
 													</div>
@@ -461,20 +423,23 @@
 											</div>
 										</div>
 										<div class="panel panel-default">
-											<div class="panel-heading" id="headingFour" role="tab">
+											<div class="panel-heading" id="heading3" role="tab">
 												<h4 class="panel-title">
-													<a aria-controls="collapseFour" aria-expanded="true" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapseFour">Mediatek - Software Engineerr / Oct 2016 - May 2018
+													<a aria-controls="collapse3" aria-expanded="true" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapse3">NEC Corporation(Wuhan) - Software Engineer / Oct 2008 — May 2011
 													</a>
 												</h4>
 											</div>
-											<div aria-labelledby="headingFour" class="panel-collapse collapse" id="collapseFour" role="tabpanel">
+											<div aria-labelledby="heading3" class="panel-collapse collapse" id="collapse3"
+												 role="tabpanel">
 												<div class="panel-body">
 													<div class="row">
 														<ul>
-															<li>Established algorithm to enhance image/video contrast that works with low computational cost and high flexibility for cell phone chips.</li>
-															<li>Developed scene recognition algorithm to assist with camera auto-exposure and auto-white-balance functions, raising the correctness of color assignment.</li>
-															<li>Implemented universal auto-white-balance calibration approach that removed difference between different modules, saving time of module calibration.</li>
-															<li>Designed and tested camera auto-exposure algorithm for HDR images, enhancing overall image quality which met the requirements from customers.</li>
+															<li>Define the data dictionary</li>
+															<li>Establish business layer interface specifications</li>
+															<li>Design the user operation graphical interface</li>
+															<li>Implement data transmission and storage as well as module connection operations</li>
+															<li>Provide software maintenance and technical support in the later stages</li>
+
 														</ul>
 													</div>
 												</div>
@@ -494,7 +459,7 @@
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-								<h2 class="colorlib-heading animate-box">Course Project</h2>
+								<h2 class="colorlib-heading animate-box">Project</h2>
 							</div>
 						</div>
 						<div class="row">
@@ -505,21 +470,26 @@
 											<div class="timeline-icon color-1">
 											</div>
 											<div class="timeline-label">
-												<h2>MSCV Capstone Project</h2>
-												<h4>Object Detection in Infrared Images </h4>
-												<span>
-											<div class="container">
+												<h2>Wuhan Zhongshan Road Tunnel Monitoring System</h2>
+												<h4>The Java Development Engineer </h4>
+
+											         <div class="container-fluid" >
 											  <div class="row">
 											    <div class="col-md-4">
-													In this project, we focus on detection with RGB and infrared signals in the driving scenes.<br>
-													[<a href="https://mscvprojects.ri.cmu.edu/2020teamc/"  target="_blank">Website</a>]<br>
+													This project mainly involves the establishment of a monitoring system platform for an underpass tunnel,
+													including the installation of necessary equipment and the development of related control software.
 											    </div>
-											    <div class="col-md-4">
-													<img alt="Italian Trulli" src="images/capstone.jpg" width="80%">
+											    <div class="col-md-8">
+													My role in the project was as a research and development engineer.
+													I was primarily responsible for the development of the tunnel fan control software and fire alarm software,
+													as well as the debugging of related equipment on-site.
+													Additionally, I completed the later maintenance and technical support of the software,
+													and provided training and guidance for users at the project site.
+<!--													<img alt="Italian Trulli" src="images/capstone.jpg" width="80%">-->
 											    </div>
 											  </div>
 											</div>
-					                  	</span>
+
 											</div>
 										</div>
 									</article>
@@ -528,31 +498,27 @@
 											<div class="timeline-icon color-2">
 											</div>
 											<div class="timeline-label">
-												<h2>Course: 16720 Computer Vision - B</h2>
-												<h4>Rectangling Panoramic Images via Warping</h4>
-												<span>
-											<div class="container">
+												<h2>The Communication Information Management Support System (CIMS) - NEC Corporation (Wuhan) </h2>
+												<h4>The Development Engineer</h4>
+
+											<div class="container-fluid">
 											  <div class="row">
-											    <div class="col-md-3">
-													We implemented the paper: Rectangling Panoramic Images via Warping, SIGGRAPH 2013, as our final project of course 16720B. You can find the code below.<br>
-													[<a href="https://github.com/Jamie725/Rectangling-Panoramic-Images-Via-Warping"  target="_blank">Code</a>]
-													[<a href="docs/cv_final.pptx"  target="_blank">Slides</a>]
+											    <div class="col-md-4">
+													The Communication Information Management Support System (CIMS) of NEC Corporation in Wuhan
+													primarily focuses on the management and monitoring of SDH equipment within relevant communication departments.
 													<br>
 											    </div>
-											    <div class="col-md-4">
-													<video controls height="270" width="360">
-  														<source src="video/panorama_demo.mp4" type="video/mp4">
-
-														Your browser does not support the video tag.
-													</video>
+											    <div class="col-md-8">
+													As a development engineer, I have participated in requirements analysis, system design, coding, testing,
+													and the writing and organization of documentation materials in the later stages. <br>
+													In the project, I was responsible for the collection, analysis, organization, and visualization of internal information from the transmission network system.
 											    </div>
 											  </div>
 											</div>
-					                  	</span>
+
 											</div>
 										</div>
 									</article>
-
 								</div>
 							</div>
 						</div>
@@ -566,7 +532,7 @@
 					<body>
 
 					<div class="content">
-						<a href="https://clustrmaps.com/site/1bqgr"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4&cl=ffffff" /></a>
+						<a href="https://clustrmaps.com/site/1bqgr"  title="Visit tracker"><img alt="clustrmaps" src="//www.clustrmaps.com/map_v2.png?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4&cl=ffffff" /></a>
 
 					</div>
 
