--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<div class="overlay"></div>
 							<div class="container-fluid">
 								<div class="row">
-									<div class="col-md-11 col-md-offset-5 col-md-pull-3 col-sm-12 col-xs-12 slider-text">
+									<div class="col-md-offset-6 col-md-6 col-md-pull-1 col-sm-10 col-xs-10 slider-text">
 										<div class="slider-text-inner">
 											<div class="desc">
 												<h1>Hi !&nbsp;I'm Jie Lin</h1>
