--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 										<div class="panel panel-default">
 											<div class="panel-heading" id="heading1" role="tab">
 												<h4 class="panel-title">
-													<a aria-controls="collapse1" aria-expanded="true" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapse1">
+													<a aria-controls="collapse1" aria-expanded="true" data-parent="#accordion" data-toggle="collapse" href="#collapse1">
 														Quanzhou Normal University - Lecturer / Aug 2011 — Now
 													</a>
 												</h4>
@@ -439,7 +439,6 @@
 															<li>Design the user operation graphical interface</li>
 															<li>Implement data transmission and storage as well as module connection operations</li>
 															<li>Provide software maintenance and technical support in the later stages</li>
-
 														</ul>
 													</div>
 												</div>
