--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 													My research focuses on human-computer interaction, machine vision, and data visualization.
 												</h2>
 												<p>
-													<a class="btn btn-primary btn-learn" href="docs/new.pdf">Download CV <i class="icon-download4"></i></a>
+													<a class="btn btn-primary btn-learn" href="docs/cv-jielin.pdf">Download CV <i class="icon-download4"></i></a>
 												</p>
 											</div>
 										</div>
