--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<link href="css/owl.carousel.min.css" rel="stylesheet">
 	<link href="css/owl.theme.default.min.css" rel="stylesheet">
 	<!-- Theme style  -->
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/styleN.css" rel="stylesheet">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
