--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 											<div class="panel-heading" id="heading2" role="tab">
 												<h4 class="panel-title">
 													<a aria-controls="collapse2" aria-expanded="true" class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapse2">
-														Key Laboratory of New Technologies and Knowledge Engineering <br>for Big Data Management, Fujian Province - Researcher / Aug 2013 - Jul 2016
+														Key Laboratory of New Technologies and Knowledge Engineering <br>for Big Data Management, Fujian Province - Researcher / Aug 2013<br> — Jul 2016
 													</a>
 												</h4>
 											</div>
